# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml  recursive.demo
.github/workflows/: pyci.yml
gendiff/: __init__.py  cli.py  gendiff_engine.py
gendiff/formatters/: json.py  plain.py
gendiff/scripts/: gendiff.py  gendiff_engine.py  parser.py
gendiff/scripts/Format/: plain_format.py  stylish_format.py
jsons/: file2.json
tests/: test_cli.py  test_gendiff_json.py  test_gendiff_plain.py  test_gendiff_yml.py  test_json.py
tests/fixtures/: expected_json.txt  file1.json  file2.yml  test_recursive.py
