[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pyyaml>=6.0.3",
    "ruff<=0.9.7",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ['gendiff']


[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"


[tool.coverage.run]
omit = [
    "gendiff/cli.py",
    "gendiff/scripts/gendiff.py"
]